Fixing layout problem when library is expanded and removing tooltip

--- a/src/assets/styles/cmps/LibraryList.css
+++ b/src/assets/styles/cmps/LibraryList.css
@@ -25,7 +25,6 @@
 
 .library-list li {
   display: flex;
-  height: 72px !important; 
   align-items: center;
   gap: 12px;
   padding: 12px 10px !important;
